deployment/slink-webhook-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slink-webhook
spec:
  selector:
    matchLabels:
      app: slink-webhook
  template:
    metadata:
      labels:
        app: slink-webhook
    spec:
      enableServiceLinks: false
      containers:
      - name: slink-webhook
        image: $__tag
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8443
            name: https
        livenessProbe:
          httpGet:
            path: /health
            port: https
            scheme: HTTPS
          failureThreshold: 1
          periodSeconds: 30
