deployment/slink-webhook-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: slink-webhook
spec:
  selector:
    app: slink-webhook
  ports:
  - port: 443
    name: https
    targetPort: 8443
