deployment/slink-webhook-all.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: slink-webhook
---
apiVersion: v1
kind: Service
metadata:
  namespace: slink-webhook
  name: slink-webhook
spec:
  selector:
    app: slink-webhook
  ports:
  - port: 443
    name: https
    targetPort: 8443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: slink-webhook
  name: slink-webhook
spec:
  selector:
    matchLabels:
      app: slink-webhook
  template:
    metadata:
      labels:
        app: slink-webhook
    spec:
      enableServiceLinks: false
      containers:
      - name: slink-webhook
        image: docker.io/uablrek/slink-webhook:latest
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8443
            name: https
        livenessProbe:
          httpGet:
            path: /health
            port: https
            scheme: HTTPS
          failureThreshold: 1
          periodSeconds: 30
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: slink-webhook
  labels:
    app: slink-webhook
webhooks:
  - name: slink-webhook.default.svc
    admissionReviewVersions: ["v1"]
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQ0VENDQXNtZ0F3SUJBZ0lVT28rYlZoUW5hZGtJK2RJVjh2T3VsM3N1UE5Nd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0tqRW9NQ1lHQTFVRUF3d2ZjMnhwYm1zdGQyVmlhRzl2YXk1emJHbHVheTEzWldKb2IyOXJMbk4yWXpBZQpGdzB5TXpFeU1qY3dPRFExTURoYUZ3MHpNekV5TWpRd09EUTFNRGhhTUNveEtEQW1CZ05WQkFNTUgzTnNhVzVyCkxYZGxZbWh2YjJzdWMyeHBibXN0ZDJWaWFHOXZheTV6ZG1Nd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUIKRHdBd2dnRUtBb0lCQVFDV1R1NlJnb3ZKRTk5WXFjd0hyNkxTK01RZkVIdURsY1FXc2ZVK1AydEJKUTVRdkY4OApYczJGbXdwUEJo [...]
      service:
        name: slink-webhook
        namespace: slink-webhook
        path: "/"
        port: 443
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    sideEffects: None
    timeoutSeconds: 5
    reinvocationPolicy: Never
    failurePolicy: Ignore
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values: ["kube-system", "slink-webhook"]
